updated connection string

--- a/FitMan/appsettings.json
+++ b/FitMan/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "FitManConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=FitManDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
