--- a/fit-man/.env
+++ b/fit-man/.env
@@ -1,9 +1,12 @@
 REACT_APP_BACKEND=http://localhost:5000
 
-REACT_APP_GYMIMG=assets/images/gyms
+REACT_APP_BASEIMGURL=/assets/images
 
-REACT_APP_COURSEIMG=assets/images/courses
+REACT_APP_GYMIMG=/gyms
 
-REACT_APP_TRAINERIMG=assets/images/trainers
+REACT_APP_COURSEIMG=/courses
 
-REACT_APP_EXERCISEIMG=assets/images/exercises
+REACT_APP_TRAINERIMG=/trainers
+
+REACT_APP_EXERCISEIMG=/exercises
+
