--- a/fit-man/.env
+++ b/fit-man/.env
@@ -1,5 +1,7 @@
 REACT_APP_BACKEND=http://localhost:5000
 
+REACT_APP_FRONTEND=http://localhost:3000
+
 REACT_APP_BASEIMGURL=/assets/images
 
 REACT_APP_GYMIMG=/gyms
